--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Thirty</string>
     <string name="score">Score: </string>
+    <string name="round">Round: </string>
+    <string name="throwNum">Throw: </string>
+
 </resources>
